# budget-tracker

./: README.md  docker-compose.yml  prepare_ci.sh
.buildkite/: pipeline.yml  template.yml
.github/: dependabot.yml
.github/workflows/: playwright.yml
.trunk/: trunk.yaml
backend/: .env.template  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/core/: config.py
backend/app/models/: __init__.py
backend/app/models/user/: user.py
backend/app/scalars/: __init__.py
backend/app/scalars/utils/: healthcheck.py
backend/app/tests/tests/: test_healthcheck.py
backend/app/tests/tests/function/: test_settings.py
backend/scripts/: lint.sh
frontend/: .env.template  .eslintrc.json  .graphqlrc.ts  .prettierrc  Dockerfile  Dockerfile.playwright  README.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/app/about/: page.tsx
frontend/graphql/queries/: HealthcheckGet.gql
frontend/lib/: graphql.ts
frontend/tests/: example.spec.ts
