[tool.poetry]
name = "budget-tracker"
version = "0.1.0"
description = "This is backend for app to manage finances"
authors = ["Apriano <aprzybylski54@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
neomodel = "^5.2.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.217.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240106"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
faker = "^22.5.1"
coverage = "^7.4.0"
python-multipart = "^0.0.6"
ruff = "^0.1.14"
httpx = "^0.26.0"
pytest-mock = "^3.12.0"
buildkite-test-collector = "^0.1.7"
autoflake = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"